added several new ways to create data

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -48,6 +48,51 @@
     "#data = data.reshape(-1, height, width)\n",
     "#print(f\"The shape of your data is {data.shape}.\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(4410,)"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import librosa\n",
+    "\n",
+    "wav_file, sr = librosa.load(\"audio_files/class_0/Test/seconds_0.2_overlap_0/wav/speech_test_1_slice_0.0.wav\")\n",
+    "\n",
+    "wav_file.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.        ,  0.        ,  0.        , ..., -0.00659891,\n",
+       "        0.00279888,  0.00950949], dtype=float32)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wav_file"
+   ]
   }
  ],
  "metadata": {
